-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
1
-
2a741a3f0 (dev), 2a494146a (6.9)
-
Foundation Sprint 129
Currently compilation fails if quicktemplates2-hover is disabled.
- clones
-
QTBUG-135890 Allow configuring Windows without clipboard feature
-
- Closed
-
- is cloned by
-
QTBUG-136036 colorpaletteclient doesn't compile if qml-network is disabled
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135946 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 640298,3 | Fix compilation when quicktemplates2_hover feature is disabled | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 640605,2 | Fix compilation when quicktemplates2_hover feature is disabled | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 640676,1 | Fix compilation when quicktemplates2_hover feature is disabled | 6.8 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |