Fix compilation when quicktemplates2_hover feature is disabled

Pick-to: 6.9 6.8
Fixes: QTBUG-135946
Change-Id: Ie22da6a87d3cb43601ae9df30cb99262a8f6b479
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>